[project]
name = "social_capital_agent"
version = "0.1.0"
description = "social_capital_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0"
]

[project.scripts]
social_capital_agent = "social_capital_agent.main:run"
run_crew = "social_capital_agent.main:run"
train = "social_capital_agent.main:train"
replay = "social_capital_agent.main:replay"
test = "social_capital_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
